提交了改进版本

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,216 @@ tmp/126.png
 tmp/127.png
 tmp/128.png
 tmp/129.png
+all/0.png
+all/1.png
+all/2.png
+all/3.png
+all/4.png
+all/5.png
+all/7.png
+all/8.png
+all/9.png
+all/10.png
+all/11.png
+all/12.png
+all/13.png
+all/14.png
+all/15.png
+all/16.png
+all/17.png
+all/18.png
+all/19.png
+all/20.png
+all/21.png
+all/22.png
+all/23.png
+all/24.png
+all/25.png
+all/26.png
+all/27.png
+all/28.png
+all/29.png
+all/30.png
+all/31.png
+all/32.png
+all/33.png
+all/34.png
+all/35.png
+all/36.png
+all/37.png
+all/38.png
+all/39.png
+all/40.png
+all/42.png
+all/43.png
+all/44.png
+all/45.png
+all/46.png
+all/47.png
+all/48.png
+all/49.png
+all/50.png
+all/51.png
+all/52.png
+all/53.png
+all/54.png
+all/55.png
+all/56.png
+all/57.png
+all/58.png
+all/59.png
+all/60.png
+all/61.png
+all/62.png
+all/63.png
+all/64.png
+all/65.png
+all/66.png
+all/67.png
+all/68.png
+all/69.png
+all/70.png
+all/71.png
+all/72.png
+all/73.png
+all/74.png
+all/75.png
+all/76.png
+all/77.png
+all/78.png
+all/79.png
+all/80.png
+all/81.png
+all/82.png
+all/83.png
+all/84.png
+all/85.png
+all/86.png
+all/87.png
+all/88.png
+all/89.png
+all/90.png
+all/91.png
+all/92.png
+all/93.png
+all/94.png
+all/95.png
+all/96.png
+all/97.png
+all/98.png
+all/99.png
+all/100.png
+all/screenshot_51_(156,25,1596,975).png
+all/screenshot_52_(156,25,1596,975).png
+all/screenshot_60_(156,25,1596,975).png
+all/test4.png
+all_result/0.png
+all_result/1.png
+all_result/2.png
+all_result/3.png
+all_result/4.png
+all_result/5.png
+all_result/7.png
+all_result/8.png
+all_result/9.png
+all_result/10.png
+all_result/11.png
+all_result/12.png
+all_result/13.png
+all_result/14.png
+all_result/15.png
+all_result/16.png
+all_result/17.png
+all_result/18.png
+all_result/19.png
+all_result/20.png
+all_result/21.png
+all_result/22.png
+all_result/23.png
+all_result/24.png
+all_result/25.png
+all_result/26.png
+all_result/27.png
+all_result/28.png
+all_result/29.png
+all_result/30.png
+all_result/31.png
+all_result/32.png
+all_result/33.png
+all_result/34.png
+all_result/35.png
+all_result/36.png
+all_result/37.png
+all_result/38.png
+all_result/39.png
+all_result/40.png
+all_result/42.png
+all_result/43.png
+all_result/44.png
+all_result/45.png
+all_result/46.png
+all_result/47.png
+all_result/48.png
+all_result/49.png
+all_result/50.png
+all_result/51.png
+all_result/52.png
+all_result/53.png
+all_result/54.png
+all_result/55.png
+all_result/56.png
+all_result/57.png
+all_result/58.png
+all_result/59.png
+all_result/60.png
+all_result/61.png
+all_result/62.png
+all_result/63.png
+all_result/64.png
+all_result/65.png
+all_result/66.png
+all_result/67.png
+all_result/68.png
+all_result/69.png
+all_result/70.png
+all_result/71.png
+all_result/72.png
+all_result/73.png
+all_result/74.png
+all_result/75.png
+all_result/76.png
+all_result/77.png
+all_result/78.png
+all_result/79.png
+all_result/80.png
+all_result/81.png
+all_result/82.png
+all_result/83.png
+all_result/84.png
+all_result/85.png
+all_result/86.png
+all_result/87.png
+all_result/88.png
+all_result/89.png
+all_result/90.png
+all_result/91.png
+all_result/92.png
+all_result/93.png
+all_result/94.png
+all_result/95.png
+all_result/96.png
+all_result/97.png
+all_result/98.png
+all_result/99.png
+all_result/100.png
+all_result/screenshot_51_(156,25,1596,975).png
+all_result/screenshot_52_(156,25,1596,975).png
+all_result/screenshot_60_(156,25,1596,975).png
+all_result/test4.png
+__pycache__/config.cpython-36.pyc
+__pycache__/pageItemRec.cpython-36.pyc
+crnn/__pycache__/__init__.cpython-36.pyc
+crnn/__pycache__/pp_pred.cpython-36.pyc
+crnn/__pycache__/util.cpython-36.pyc
+det/__pycache__/__init__.cpython-36.pyc
+det/__pycache__/picodet.cpython-36.pyc
